# QGoldenBook

./: .gitignore  .gitignore.orig  CMakeLists.txt
src/: CMakeLists.txt
src/QGBDrawer/: .gitignore  CMakeLists.txt  DrawerToolDockWidget.cpp  DrawerToolDockWidget.h  DrawerToolDockWidget.ui  MainDrawerWindow.ui  MainWindow.cpp  MainWindow.h  image.qrc  main.cpp  qtcolorpicker.cpp  qtcolorpicker.h  tabletcanvas.cpp  tabletcanvas.h
src/QGBViewer/: .gitignore  CMakeLists.txt  QGBImage.cpp  QGBImage.h  QGBViewer  QGBViewerMainWindow.cpp  QGBViewerMainWindow.h  QGBViewerMainWindow.ui  QTouchCollageWidget.cpp  QTouchCollageWidget.h  QTouchSelectionWidget.cpp  QTouchSelectionWidget.h  main.cpp
src/libQGBBase/: CMakeLists.txt  message.proto
src/libQGBBase/exceptions/: Exception.cpp  Exception.h
src/libQGBBase/server/: QMessageClient.cpp  QMessageClient.h  QMessageServer.cpp  QMessageServer.h  QMessageSocket.cpp  QMessageSocket.h  QMessageSocketListener.cpp  QMessageSocketListener.h
src/libQGBBase/settings/: QGBSettings.cpp  QGBSettings.h  Settings.ui
src/libQGBBase/utils/: Factory.cpp  Factory.h  Prototype.cpp  Prototype.h
